--- a/PawSomeDash/package.json
+++ b/PawSomeDash/package.json
@@ -9,12 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
     "bootstrap": "^5.2.3",
+    "lodash": "^4.17.21",
+    "material-react-table": "^1.9.2",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-simple-maps": "^1.0.0",
+    "recharts": "^2.5.0",
     "rsuite": "^5.29.0",
     "states-us": "^1.0.2"
   },
